# 3drepobouncer

./: CMakeLists.txt  README.md  bouncer.cmd  bouncer_build.cmd  csharp_example.cmd  csharp_example_build.cmd
bouncer/: CMakeLists.txt
bouncer/src/repo/: CMakeLists.txt  repo_controller.cpp  repo_controller.h
bouncer/src/repo/core/handler/: CMakeLists.txt  repo_database_handler_mongo.cpp
bouncer/src/repo/core/handler/fileservice/: repo_file_handler_s3.h
bouncer/src/repo/core/model/: repo_node_utils.h
bouncer/src/repo/core/model/bson/: CMakeLists.txt  repo_bson.cpp  repo_bson.h  repo_bson_builder.cpp  repo_bson_builder.h  repo_bson_factory.cpp  repo_bson_factory.h  repo_bson_issue.cpp  repo_bson_issue.h  repo_node.h  repo_node_camera.cpp  repo_node_camera.h  repo_node_light.cpp  repo_node_light.h
bouncer/src/repo/core/model/collection/: repo_scene.cpp  repo_scene.h
bouncer/src/repo/lib/: CMakeLists.txt  repo_license.cpp  repo_log.h  repo_utils.h
bouncer/src/repo/lib/datastructure/: CMakeLists.txt  repo_uuid.h
bouncer/src/repo/manipulator/: repo_manipulator.cpp  repo_manipulator.h
bouncer/src/repo/manipulator/modelconvertor/export/: repo_model_export_assimp.cpp  repo_model_export_src.cpp
bouncer/src/repo/manipulator/modelconvertor/import/: repo_ifc_utils_geometry.cpp  repo_model_import_assimp.cpp  repo_model_import_assimp.h  repo_model_import_synchro.h
bouncer/src/repo/manipulator/modeloptimizer/: repo_optimizer_multipart.cpp  repo_optimizer_trans_reduction.cpp  repo_optimizer_trans_reduction.h
client/: CMakeLists.txt
client/src/: CMakeLists.txt  main.cpp
cryptolens/lib/Release/: cryptolens.lib
csharp_example/: csharp_example.sln
csharp_example/csharp_example/: Program.cs  csharp_example.csproj
csharp_example/csharp_example/Properties/: AssemblyInfo.cs
test/src/unit/: CMakeLists.txt  repo_test_utils.h
test/src/unit/repo/core/handler/: ut_repo_database_handler_mongo.cpp
test/src/unit/repo/core/model/bson/: ut_repo_bson_factory.cpp
test/src/unit/repo/core/model/collection/: ut_repo_scene.cpp
test/src/unit/repo/lib/: CMakeLists.txt  ut_repo_utils.cpp
wrapper/: CMakeLists.txt
wrapper/src/: c_sharp_wrapper.cpp  c_sharp_wrapper.h  repo_csharp_interface.cpp  repo_csharp_interface.h
